--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <header class="header decorated-zone">
     <span class="header__rec" aria-hidden="true">rec</span>
     <nav class="header__theme-menu">
+      <div></div>
       <ul class="header__theme-menu-list">
         <li class="header__theme-menu-item">
           <button class="header__theme-menu-button header__theme-menu-button_type_light">
@@ -38,18 +39,22 @@
           </button>
         </li>
       </ul>
+      <div></div>
     </nav>
-    <div class="header_main_title_container">
-      <h1 class="header_main_title">no focus</h1>
+    <h1 class="header_main_title">no focus</h1>
+    <div class="container__p-main">
+      <div></div>
       <p class="header__subtitle title-decor">
         Что делать, когда не можешь делать ничего<br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень
         надо
       </p>
+      <div></div>
     </div>
+    
   </header>
   <main class="main">
-    <section class="section">
+    <section class="section-why">
       <h2 class="section__title">Почему сосредоточиться так сложно</h2>
       <div class="section__article-list">
         <article class="section__article-item">
@@ -82,7 +87,7 @@
         </article>
       </div>
     </section>
-    <section class="section">
+    <section class="section-causes">
       <h2 class="section__title">Что снижает концентрацию внимания?</h2>
       <div class="section__article-list">
         <article class="section__article-item">
@@ -121,19 +126,19 @@
         </article>
       </div>
     </section>
-    <section class="section">
+    <section class="section-advices">
       <h2 class="section__title">
         Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
         секунд)
       </h2>
       <div class="section__article-list">
-        <h2 class="section__article-list-title title-decor">
+        <h3 class="section__article-list-title title-decor">
           5 простых (на самом деле не очень) советов
-        </h2>
+        </h3>
         <article class="section__article-item">
-          <h3 class="section__article-title section__article-title_regular title-decor">
+          <h4 class="section__article-title section__article-title_regular title-decor">
             Представьте небо и облака
-          </h3>
+          </h4>
           <p class="section__article-text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
             успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -195,8 +200,8 @@
         </article>
       </div>
     </section>
-    <section class="section">
-      <h2 class="section__title dark-title title-decor">
+    <section class="section_full-image">
+      <h2 class="section__title dedicated-title title-decor">
         А можно в картинках?
       </h2>
       <img src="./images/sunset.png" alt="Закат" loading="lazy" class="section__image" />
