--- a/index.html
+++ b/index.html
@@ -200,11 +200,23 @@
       <h2 class="section__title dedicated-title title-decor">
         А можно в картинках?
       </h2>
-      <img src="./images/sunset.png" alt="Закат" loading="lazy" class="section__image" />
-      <img src="./images/ice-cream.png" alt="Мороженное" loading="lazy" class="section__image" />
-      <img src="./images/tape.png" alt="Кассета" loading="lazy" class="section__image" />
-      <img src="./images/books.png" alt="Книги" loading="lazy" class="section__image" />
-      <img src="./images/street.png" alt="Улица" loading="lazy" class="section__image" />
+      <ul class="section_image-list">
+        <li class="section_image-item">
+          <img src="./images/sunset.png" alt="Закат" loading="lazy" class="section__image" />
+        </li>
+        <li class="section_image-item">
+          <img src="./images/ice-cream.png" alt="Мороженное" loading="lazy" class="section__image" />
+        </li>
+        <li class="section_image-item">
+          <img src="./images/tape.png" alt="Кассета" loading="lazy" class="section__image" />
+        </li>
+        <li class="section_image-item">
+          <img src="./images/books.png" alt="Книги" loading="lazy" class="section__image" />
+        </li>
+        <li class="section_image-item">
+          <img src="./images/street.png" alt="Улица" loading="lazy" class="section__image" />
+        </li>
+      </ul>
     </section>
   </main>
 
